# Data_Science_Boot_Camp_Test_Task

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
core/: config.py
data/raw/candidate_data/: .gitignore  articles.f.dvc  calibration.f.dvc  test.f.dvc
notebooks/: 01_eda_data.ipynb
services/: document_processor.py  experiment_service.py  models_manager.py  store_manager.py  store_service.py
src/answers/base_model_answers/: answer.csv
src/answers/chunked_body_answers/: answer.csv
src/answers/section_chunked_answers/: answer.csv
src/app/: bootstrap.py
src/data/: loaders.py  processing.py  types.py
src/evaluation/: evaluator.py  metrics.py
src/indexing/: collection_schema.py  point_builder.py  point_io.py  qdrant_store.py
src/models/: configs.py  embedders.py  factory.py  rerankers.py
src/qdrant_storage/: raft_state.json
src/qdrant_storage/collections/base_collection/: config.json
src/qdrant_storage/collections/base_collection/0/: newest_clocks.json  replica_state.json
src/retrieval/: pipeline.py  retrievers.py  types.py
src/runs/20260719_201906_base/: metrics.json
src/runs/20260720_032002_section_chunked/: metrics.json
src/runs/20260720_161107_chunked_body/: metrics.json
src/runs/20260720_210403_base/: metrics.json
src/scripts/: evaluate.py  evaluate_chunked.py  evaluate_section_chunked.py  index_articles.py  index_chunked_articles.py  index_section_chunked_articles.py  make_answers.py  make_chunked_answers.py  make_section_chunked_answers.py  search_chunked_debug.py  search_debug.py  search_section_chunked_debug,py
(+8 files in other folders)
