[project]
name = "avitodatasciencebootcamptesttask"
version = "0.1.0"
description = ""
authors = [
    {name = "Drema"}
]
requires-python = "==3.12.12"
dependencies = [
    "ipython (>=9.15.0,<10.0.0)",
    "pyarrow (>=25.0.0,<26.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "qdrant-client (>=1.18.0,<2.0.0)",
    "beautifulsoup4 (>=4.15.0,<5.0.0)",
    "dvc (>=3.67.1,<4.0.0)",
    "fastembed (>=0.8.0,<0.9.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.3.0,<8.0.0)"
]
